--- a/web/server/views/sass/_sass-layout.njk
+++ b/web/server/views/sass/_sass-layout.njk
@@ -8,6 +8,7 @@
 		<ul>
 			<li><a href="/sass/">SASS</a></li>
 			<li><a href="/sass/code-standards">Code standards</a></li>
+			<li><a href="/sass/libraries">Libraries</a></li>
 			<li><a href="/sass/docs">Documentation</a></li>
 		</ul>
 	</nav>
