--- a/web/server/views/sass/index.njk
+++ b/web/server/views/sass/index.njk
@@ -34,6 +34,13 @@
 				</p>
 			</div>
 
+			<div class="grid__item one-whole tablet--one-third desktop--one-quarter">
+				<h4><a href="/sass/libraries">Libraries</a></h4>
+				<p>
+					The third party libraries we use
+				</p>
+			</div>
+
 		</div>
 	</div>
 
