Fix broken links and SEO issues

--- a/web/server/views/index.njk
+++ b/web/server/views/index.njk
@@ -67,13 +67,9 @@
 
 		<div class="grid">
 
-			{{ item("Syntax", "/sass/syntax", "Syntax, formatting, conventions and code structure") }}
+			{{ item("Code standards", "/sass/code-standards", "SASS code standards and code style guide") }}
 
-			{{ item("Naming", "/sass/naming", "Variable naming and BEM convention") }}
-
-			{{ item("Layout", "/sass/grid", "Grid unit proportions, gutters and spacing") }}
-
-			{{ item("Colour", "/sass/colour", "Colour contrast, Sass variables, colour palettes") }}
+			{{ item("Libraries", "/sass/libraries", "3rd party SASS libraries") }}
 
 			{{ item("Documentation", "/sass/docs", "Auto-generated SASS code documentation") }}
 
@@ -82,8 +78,6 @@
 		<h3 class="heading heading--separator">JavaScript</h3>
 
 		<div class="grid">
-
-			{{ item("Syntax", "/javascript/syntax", "Syntax, formatting, conventions and code structure") }}
 
 			{{ item("Documentation", "/javascript/docs", "Auto-generated JS code documentation") }}
 
