--- a/web/server/views/layouts/_layout.njk
+++ b/web/server/views/layouts/_layout.njk
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<meta name="description" content="{{ title }} in NICE Experience, from NICE Digital Services">
 
 	<title>{{ title }} | NICE Experience</title>
 
