--- a/web/server/views/layouts/_sidebar.njk
+++ b/web/server/views/layouts/_sidebar.njk
@@ -14,35 +14,32 @@
 							<a href="/style-guide/">Style Guide</a>
 						</h5>
 						<ul>
-							<li><a href="/style-guide/layout">Layout</a></li>
-							<li><a href="/style-guide/typography">Typography</a></li>
 							<li><a href="/style-guide/buttons">Buttons</a></li>
 							<li><a href="/style-guide/colour">Colour</a></li>
+							<li><a href="/style-guide/grid">Grid &amp; layout</a></li>
+							<li><a href="/style-guide/typography">Typography</a></li>
 						</ul>
 						<h5>
 							<a href="/components/">Components</a>
 						</h5>
 						<ul>
+							<li><a href="/components/alpha-beta-live">Alpha/beta</a></li>
 							<li><a href="/components/breadcrumbs">Breadcrumbs</a></li>
-							<li><a href="/components/tabs">Tabs</a></li>
-							<li><a href="/components/alpha-beta">Alpha/beta</a></li>
 							<li><a href="/components/navigation">Navigation</a></li>
+							<li><a href="/components/tabs">Tabs</a></li>
 						</ul>
 						<h5>
 							<a href="/sass/">SASS</a>
 						</h5>
 						<ul>
-							<li><a href="/sass/syntax">Syntax</a></li>
-							<li><a href="/sass/naming">Naming</a></li>
-							<li><a href="/sass/layout">Layout</a></li>
-							<li><a href="/sass/colour">Colour</a></li>
+							<li><a href="/sass/code-standards">Code standards</a></li>
+							<li><a href="/sass/libraries">Libraries</a></li>
 							<li><a href="/sass/docs">Documentation</a></li>
 						</ul>
 						<h5>
 							<a href="/javascript/">JavaScript</a>
 						</h5>
 						<ul>
-							<li><a href="/javascript/syntax">Syntax</a></li>
 							<li><a href="/javascript/docs">Documentation</a></li>
 						</ul>
 					</nav>
