Rename semantic colour names to be general-to-specific

--- a/src/stylesheets/components/_components-breadcrumbs.scss
+++ b/src/stylesheets/components/_components-breadcrumbs.scss
@@ -21,11 +21,11 @@
     }
 
     &--active {
-      color: $text-colour;
+      color: $colour-text;
     }
 
     a {
-      color: $text-colour;
+      color: $colour-text;
     }
   }
 }
