--- a/src/stylesheets/components/_components-nav.scss
+++ b/src/stylesheets/components/_components-nav.scss
@@ -13,7 +13,7 @@
     }
 
     a {
-      color: $text-colour;
+      color: $colour-text;
       display: block;
       padding: 20px 15px;
       position: relative;
