--- a/src/stylesheets/components/_components-panel.scss
+++ b/src/stylesheets/components/_components-panel.scss
@@ -5,7 +5,7 @@
 /// A panel is a container for visually separating content.
 /// Often used within a sidebar.
 .panel {
-  background: get-colour(grey, x-light);
+  background: $colour-panel;
   padding: 1em;
 
   &--dark {
