--- a/src/stylesheets/typography/_typography-headings.scss
+++ b/src/stylesheets/typography/_typography-headings.scss
@@ -40,7 +40,7 @@ h6 {
   }
 
   &--separator {
-    border-bottom: 1px solid $border-colour;
+    border-bottom: 1px solid $colour-border;
   }
 }
 
