--- a/src/stylesheets/helpers/_helpers-glyphs.scss
+++ b/src/stylesheets/helpers/_helpers-glyphs.scss
@@ -34,7 +34,7 @@ $glyphs: (
 /// Gets a glyph code, or several, (character entity reference) from the
 /// $glyphs map, matching the given $names. Usually used with the content
 /// property for psuedo elements, to avoid use of magic character reference strings.
-/// @param [argList] $names The name(s) of the glyph(s) to get
+/// @param {argList} $names The name(s) of the glyph(s) to get
 /// @returns {string} The character entity reference code(s) as a string, e.g. '\201C' or '\02008\029C9'
 /// @see $glyphs
 /// @example Single glyph
