--- a/web/client/stylesheets/main.scss
+++ b/web/client/stylesheets/main.scss
@@ -4,6 +4,7 @@
 @import 'bootstrap';
 
 // Components
+@import 'components/contrast';
 @import 'components/example';
 @import 'components/swatch';
 @import 'components/navbar';
