--- a/web/server/views/layouts/_layout.njk
+++ b/web/server/views/layouts/_layout.njk
@@ -100,7 +100,7 @@
 	<footer class="footer" role="contentinfo">
 		<nav>
 			<ul>
-				<li><a href="">NICE Experience</a></li>
+				<li><a href="/">NICE Experience</a></li>
 			</ul>
 		</nav>
 	</footer>
