--- a/web/server/views/about/installation.njk
+++ b/web/server/views/about/installation.njk
@@ -1,7 +1,7 @@
 {% extends "./_about-layout.njk" %}
 {% set title = "Installation" %}
 
-{% block body %}
+{% block main %}
 
 	<div class="container">
 		<h1>Installation</h1>
