--- a/web/server/views/about/roadmap.njk
+++ b/web/server/views/about/roadmap.njk
@@ -1,7 +1,7 @@
 {% extends "./_about-layout.njk" %}
 {% set title = "Roadmap" %}
 
-{% block body %}
+{% block main %}
 
 	<div class="container">
 		<h1>Roadmap</h1>
@@ -29,21 +29,23 @@
 				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
 					<h3 class="h5">Components</h3>
 					<ul>
-						<li><s>Typography</s></li>
-						<li><s>Grid</s></li>
-						<li><s>Buttons</s></li>
-						<li><s>Breadcrumbs</s></li>
-						<li><s>Alpha/beta banners</s></li>
+						<li><a href="/style-guide/typography"><s>Typography</s></a></li>
+						<li><a href="/style-guide/layout"><s>Grid</s></a></li>
+						<li><a href="/style-guide/buttons"><s>Buttons</s></a></li>
+						<li><a href="/components/breadcrumbs"><s>Breadcrumbs</s></a></li>
+						<li><a href="/components/alpha-beta-live"><s>Alpha/beta/live banners</s></a></li>
 						<li>Navigation</li>
+						<li>Alerts - info/error/warning</li>
+						<li>Cookie message</li>
 					</ul>
 				</div>
 				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
 					<h3 class="h5">Content</h3>
 					<ul>
-						<li>Colour documentation</li>
-						<li><s>Grid examples</s></li>
-						<li><s>SASS coding standards</s></li>
-						<li>SASSDoc generated pages</li>
+						<li><a href="/style-guide/colour"><s>Colour documentation</s></a></li>
+						<li><a href="/style-guide/layout"><s>Grid examples</s></a></li>
+						<li><a href="/sass/code-standards"><s>SASS coding standards</s></a></li>
+						<li><a href="/sass/docs">SASSDoc generated pages</a></li>
 					</ul>
 				</div>
 				<div class="grid__item one-whole palm--one-half tablet--one-third desktop--one-quarter">
