--- a/web/server/views/index.njk
+++ b/web/server/views/index.njk
@@ -54,7 +54,7 @@
 
 				{{ item("Tabs", "/components/tabs", "Content is separated into different panes, with only one pane viewable at a time.") }}
 
-				{{ item("Alpha/beta", "/components/alpha-beta-live", "Phase tags and banner to denote alpha and beta services") }}
+				{{ item("Alpha/beta/live", "/components/alpha-beta-live", "Phase tags and banner to denote alpha and beta services") }}
 
 				{{ item("Navigation", "/components/navigation", "Lorem ipsum dolor sit amet, consectetur adipisicing elit.") }}
 
