--- a/src/stylesheets/typography/_typography-quotations.scss
+++ b/src/stylesheets/typography/_typography-quotations.scss
@@ -4,7 +4,7 @@
 
 /// Blockquote style
 .quote {
-  @include nice-font-size(2);
+  @include font-size($scale: h4);
   font-weight: 300;
 
   &::before {
@@ -25,7 +25,7 @@
 
   footer,
   cite {
-    @include nice-font-size(0);
+    @include font-size($scale: 0);
     font-style: normal;
   }
 }
